# boardgames-app

./: .env  .gitignore  ARCHITECTURE.md  pyproject.toml
app/: main.py
app/routers/: __init__.py  dependencies.py
app/routers/v1/: __init__.py  boardgames.py  dtos.py  test.py  users.py
